--- a/BuzzTracker/app/src/main/AndroidManifest.xml
+++ b/BuzzTracker/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
         <activity android:name=".LoginScreen">
         </activity>
+        <activity android:name=".AppScreen">
+        </activity>
     </application>
 
 </manifest>
