--- a/BuzzTracker/app/src/main/AndroidManifest.xml
+++ b/BuzzTracker/app/src/main/AndroidManifest.xml
@@ -21,9 +21,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginScreen"></activity>
-        <activity android:name=".AppScreen"></activity>
-        <activity android:name=".RegisterScreen"></activity>
+        <activity android:name=".LoginScreen" />
+        <activity android:name=".AppScreen" />
+        <activity android:name=".RegisterScreen" />
+        <activity
+            android:name=".LocationsList"
+            android:label="@string/title_activity_locations_list"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
