Updated Manifest file.

--- a/BuzzTracker/app/src/main/AndroidManifest.xml
+++ b/BuzzTracker/app/src/main/AndroidManifest.xml
@@ -24,10 +24,7 @@
         <activity android:name=".LoginScreen" />
         <activity android:name=".AppScreen" />
         <activity android:name=".RegisterScreen" />
-        <activity
-            android:name=".LocationsList"
-            android:label="@string/title_activity_locations_list"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".LocationsList" />
     </application>
 
 </manifest>
