--- a/BuzzTracker/app/build.gradle
+++ b/BuzzTracker/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-auth:16.0.1"
     implementation "com.google.android.gms:play-services-tagmanager:16.0.4"
     implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-database:16.0.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
