Created Donation List view. close to having the donation listview implemented. Need to figure out way to generate list of donations from datasnapshot which can only be accessed through inner class.

--- a/BuzzTracker/app/src/main/AndroidManifest.xml
+++ b/BuzzTracker/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity android:name=".Controller.RegisterScreen" />
         <activity android:name=".Controller.LocationDescriptionActivity" />
         <activity android:name=".Controller.LocationsList" />
-        <activity android:name=".Controller.DonationItemActivity"></activity>
+        <activity android:name=".Controller.DonationItemActivity" />
+        <activity android:name=".Controller.DonationListView"></activity>
     </application>
 
 </manifest>
