Donation list view now populates a separate more detailed view once a donation has been selected. This screen needs to be formatted properly before being "Done Done."

--- a/BuzzTracker/app/src/main/AndroidManifest.xml
+++ b/BuzzTracker/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity android:name=".Controller.LocationDescriptionActivity" />
         <activity android:name=".Controller.LocationsList" />
         <activity android:name=".Controller.DonationItemActivity" />
-        <activity android:name=".Controller.DonationListView"></activity>
+        <activity android:name=".Controller.DonationListView" />
+        <activity android:name=".Controller.DetailedDonationView"></activity>
     </application>
 
 </manifest>
