Added search button to App screen and back button to search view. Created empty view for search results

--- a/BuzzTracker/app/src/main/AndroidManifest.xml
+++ b/BuzzTracker/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         <activity android:name=".Controller.DonationItemActivity" />
         <activity android:name=".Controller.DonationListView" />
         <activity android:name=".Controller.DetailedDonationView" />
-        <activity android:name=".Controller.SearchView"></activity>
+        <activity android:name=".Controller.SearchView" />
+        <activity android:name=".Controller.SearchResultsView"></activity>
     </application>
 
 </manifest>
