--- a/BuzzTracker/app/build.gradle
+++ b/BuzzTracker/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation "com.google.android.gms:play-services-tagmanager:16.0.4"
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.3'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
